# analisis-titulacion-los-rios

./: .flake8  .gitignore  README.md  TREE.txt  demo.sh  main.py  pyproject.toml  requirements.txt
docs/: index.html  styles.css  titulacion.js
notebooks/: Analisis_titulacion_los_rios.ipynb
src/: etl_pipeline.py
src/config/: __init__.py  settings.py
src/data_pipeline/: __init__.py  exceptions.py  interfaces.py  models.py
src/data_pipeline/extractors/: __init__.py  excel_extractor.py
src/data_pipeline/loaders/: __init__.py  csv_loader.py
src/data_pipeline/transformers/: __init__.py  data_cleaner.py  regional_filter.py
src/data_pipeline/utils/: __init__.py  logger.py
src/data_pipeline/validators/: __init__.py  data_quality_validator.py
tests/: conftest.py  test_extractors.py  test_transformers.py
